fixed footer offcenter

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ a:active {color: #4e0044}
     position: fixed !important;
     bottom: 0;
     width: 100% !important;
-    height: 60px;   /* Height of the footer */
+    height: 50px;   /* Height of the footer */
     background: rgb(37, 37, 37);
     color: white;
     text-align: center !important;
